--- a/package.json
+++ b/package.json
@@ -6,14 +6,23 @@
   "private": true,
   "dependencies": {
     "@nestjs/common": "^10.0.2",
+    "@nestjs/config": "^4.0.1",
     "@nestjs/core": "^10.0.2",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/typeorm": "^11.0.0",
+    "@types/bcrypt": "^5.0.2",
     "axios": "^1.6.0",
+    "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "next": "~15.1.4",
+    "pg": "^8.14.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "typeorm": "^0.3.21"
   },
   "devDependencies": {
     "@eslint/compat": "^1.1.1",
@@ -56,5 +65,6 @@
   },
   "workspaces": [
     "apps/*"
-  ]
+  ],
+  "packageManager": "yarn@1.22.22"
 }
