--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@nestjs/core": "^10.0.2",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/swagger": "^11.0.7",
     "@nestjs/typeorm": "^11.0.0",
     "@types/bcrypt": "^5.0.2",
     "axios": "^1.6.0",
